[gd_scene load_steps=4 format=2]

[ext_resource path="res://grid/vision/GridVision.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/RetryButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://grid/vision/GridVisionTime.gd" type="Script" id=3]

[node name="GridVisionTime" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="MarginContainer" parent="HBoxContainer" index="0"]
margin_bottom = 594.0

[node name="VBoxContainer" parent="HBoxContainer" index="1"]
margin_left = 73.0
margin_top = 12.0
margin_right = 981.0
margin_bottom = 582.0

[node name="TopMargin" parent="HBoxContainer/VBoxContainer" index="0"]
margin_right = 908.0

[node name="HBoxContainer" parent="HBoxContainer/VBoxContainer" index="1"]
margin_right = 908.0
margin_bottom = 518.0

[node name="PanelContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="0"]
margin_bottom = 434.0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Toolbar" parent="HBoxContainer/VBoxContainer/HBoxContainer" index="1"]
margin_left = 434.0
margin_right = 908.0
margin_bottom = 434.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 30

[node name="VBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar" index="0"]
margin_left = 30.0
margin_top = 0.0
margin_right = 474.0
margin_bottom = 434.0
custom_constants/separation = 20

[node name="SessionPanelFreeplay" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="1"]
visible = false
custom_constants/separation = 20

[node name="RecordPanel" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="2"]
margin_top = 146.0
margin_bottom = 314.0

[node name="MarginContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="3"]
margin_left = 0.0
margin_top = 334.0
margin_bottom = 384.0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/margin_top = 50

[node name="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer" index="4"]
margin_left = 336.0
margin_top = 404.0
margin_right = 444.0
margin_bottom = 434.0
size_flags_horizontal = 10
size_flags_vertical = 8
text = "Quit"

[node name="BotMargin" parent="HBoxContainer/VBoxContainer" index="2"]
margin_left = 0.0
margin_top = 522.0
margin_right = 908.0
margin_bottom = 570.0
theme = null
custom_constants/margin_top = 48

[node name="TopBar" parent="." index="1"]
margin_top = 297.0
margin_bottom = 297.0

[node name="Countdown" parent="CenterOverlay" index="0"]
margin_right = 160.0

[node name="PromptLabel" parent="CenterOverlay" index="1"]
margin_left = 80.0
margin_right = 80.0

[node name="RetryButton" parent="CenterOverlay" index="2" instance=ExtResource( 2 )]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 52.0
size_flags_horizontal = 6
size_flags_vertical = 6
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/Toolbar/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterOverlay/RetryButton" to="." method="_on_RetryButton_pressed"]
